doc: Update README.md and moved images